# initx

./: .gitignore  README.md  pyproject.toml
docs/: cli.md  development.md  installer.md  roadmap.md
scripts/: install.sh
src/init_cli/: cli.py
tests/: test_cli.py
